# rag-project

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MASTER_ROADMAP.md  README.md  docker-compose.yml  pyproject.toml  ruff.toml
src/: config.py  logger.py  main.py
tests/: __init__.py  test_config.py
