[build-system]
requires = ["setuptools>=65", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-ai-engineer"
version = "0.1.0"
description = "RAG AI Engineer Technical Test - VoiceFlip"
authors = [{name = "Ingeniero Ian Suarez", email = "ingenieroiansuarez@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"

dependencies = [
    "langchain>=0.1.0",
    "langchain-huggingface>=0.0.1",
    "langchain-qdrant>=0.1.0",
    "qdrant-client>=1.7.0",
    "redis>=5.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "chainlit>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
    "black>=23.11.0",
    "isort>=5.12.0",
]

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["**/*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I"]
fix = true

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
